# multimedia-management-service

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: feature_branches.yml  linting_and_formatting.yml
lib/application/services/: Cargo.toml
lib/application/services/assets/: app.template.cfg
lib/application/services/src/: delete_parameters.rs  download_parameters.rs  lib.rs  mutimedia_management_service.rs  upload_parameters.rs
lib/domain/interfaces/: Cargo.toml
lib/domain/interfaces/src/: lib.rs  video_management_service.rs
lib/domain/models/: Cargo.toml  README.md
lib/domain/models/assets/: psql-secrets.cfg
lib/domain/models/migrations/2023-10-08-174636_models/: down.sql  up.sql
lib/domain/models/migrations/2023-10-08-204636_models/: down.sql  up.sql
lib/domain/models/migrations/2023-10-08-204637_models/: down.sql  up.sql
lib/domain/models/src/: container_meta.rs  enums.rs  file_meta.rs  lib.rs  model.rs  schema.rs  track.rs
lib/infrastructure/connectors/: .gitignore  Cargo.toml
lib/infrastructure/connectors/assets/: aws.template.cfg  az.template.cfg  azure-secrets.cfg.template  azure-secrets.dev.cfg  sample.txt
lib/infrastructure/connectors/src/: aws_s3_bucket_connector.rs  azure_blob_storage_account_connector.rs  blob_storage_connector.rs  lib.rs
lib/infrastructure/parsers/: Cargo.toml
lib/infrastructure/parsers/src/: lib.rs  mp4_parser.rs
lib/infrastructure/settings/src/: lib.rs
lib/persistence/data_access/: Cargo.toml
lib/persistence/data_access/assets/: psql.cfg
lib/persistence/data_access/src/: lib.rs  psql_data_access.rs  psql_data_access_async.rs
lib/persistence/migrations/src/: lib.rs
lib/web/controllers/: Cargo.toml
lib/web/controllers/src/: blob_controller.rs  lib.rs
lib/web/dtos/src/: lib.rs
scripts/: format-rust-files.sh
src/: main.rs
web-framework-test/actix-web/: Cargo.toml
web-framework-test/axum/: Cargo.toml
web-framework-test/axum/src/: main.rs
