[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
models = { path = "lib/domain/models" }
controllers = { path = "lib/web/controllers" }
dtos = { path = "lib/web/dtos" }
services = { path = "lib/application/services" }
connectors = { path = "lib/infrastructure/connectors" }
parsers = { path = "lib/infrastructure/parsers" }
data_access = { path = "lib/persistence/data_access" }