[package]
name = "main"
version = "0.1.0"
edition = "2021"

[dependencies]
services = { path = "lib/application/services" }
axum = { version = "0.6.20", features = ["multipart"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
hyper = "0.14.27"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"