[package]
name = "web-framework-test-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["multipart"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
hyper = "0.14"
tracing = "0.1"
tracing-subscriber = "0.2"