[package]
name = "services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connectors = { path = "../../infrastructure/connectors" }
parsers = { path = "../../infrastructure/parsers" }
data_access = { path = "../../persistence/data_access" }
models = { path = "../../domain/models" }
uuid = { version = "1.4.1", features = [ "v4"]}
chrono = "0.4"
bytes = "1.0"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.0"
tokio = { version = "1", features = ["full"] }