[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "2.1.3", features = [ "postgres", "chrono", "uuid" ] }
dotenv = "0.15.0"
uuid = { version = "1.4.1", features = [ "v4"]}