[package]
name = "connectors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.16.0"
azure_storage = "0.16.0"
azure_storage_blobs = "0.16.0"
aws-config = "0.56.1"
aws-sdk-s3 = "0.31.2"
futures = "0.3"
tokio = { version = "1.32.0", features = ["full"] }
bytes = "1.0"
dotenv = "0.15.0"
log = "0.4.20"
env_logger = "0.10.0"
uuid = { version = "1.4.1", features = [ "v4"]}