[package]
name = "data_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.2", features = ["postgres"] }
dotenvy = "0.15"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.0"
models = { path = "../../domain/models" }