[package]
name = "data_access"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
    
[dependencies]
diesel = { version = "2.1.3", features = ["postgres", "chrono", "uuid", "r2d2"] }
#diesel = "2.1.3"
diesel_migrations = "2.1.0"
#diesel-async = { version = "0.4.1", features = ["postgres"] } 
r2d2 = "0.8.10"
uuid = { version = "1.4.1", features = [ "v4"]}
dotenv = "0.15.0"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"  
env_logger = "0.10.0"
models = { path = "../../domain/models" }